modified index.html; added style.css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hi, I am Shubhang Sati
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Shubhang Sati</title>
+</head>
+<body>
+<h2>Hi, I am Shubhang Sati</h2>
+</body>
+</html>
