--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>Shubhang Sati</title>
 </head>
 <body>
-<h2>Hi, I am Shubhang Sati</h2>
+<header><h1>Hi, I am Shubhang Sati</h1></header>
 </body>
 </html>
