--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
 		<link rel="stylesheet" type="text/css" href="fa/css/font-awesome.min.css">
@@ -12,12 +12,12 @@
 			<img src="img/logo.png" height="200px;">
 		</div>
 		<center>
-			<h1 id="beforeheader" class="hidden_swipe_up" style="margin-bottom: 0px !important;">Hi</h1>
+			<h1 id="beforeheader" class="hidden hidden_swipe_up" style="margin-bottom: 0px !important;">Hi</h1>
 			<h1 id="header" class="hidden_swipe_up">I'm Shubhang</h1>
 		</center>
-		<div id="menu" align="center"><br>
+		<div id="menu" align="center" class="hidden"><br>
 			<li style="margin-right: 10%; font-size: 50px;" class="random_motion"><i class="fa fa-user" aria-hidden="true"></i></li>
-			<li style="font-size: 50px;" class="random_motion">_<i class="fa fa-pencil" aria-hidden="true"></i></li>
+			<li style="font-size: 50px;" class="random_motion"><a href="http://bashhungasit.wordpress.com">_<i class="fa fa-pencil" aria-hidden="true"></i></a></li>
 			<li style="font-size: 50px; margin-left: 10%;" class="random_motion"><i class="fa fa-address-book" aria-hidden="true"></i></li><br>
 		</div>
 		<script type="text/javascript">
@@ -25,12 +25,23 @@
 				logo = $("#logo");
 				logo.removeClass("hidden");
 				logo.addClass("visible");
-				header = $("#header");
-				header.removeClass("hidden_swipe_up");
-				header.addClass("visible_swipe_up");
 				beforeheader = $("#beforeheader");
 				beforeheader.removeClass("hidden_swipe_up");
-				beforeheader.addClass("visible_swipe_up").delay(1000);
+				beforeheader.removeClass("hidden");
+				beforeheader.addClass("visible");
+				beforeheader.addClass("visible_swipe_up");
+				header = $("#header");
+				header.addClass("hidden");
+				setTimeout(function(){
+					header.addClass("visible");
+					header.removeClass("hidden_swipe_up");
+					header.addClass("visible_swipe_up");
+					setTimeout(function(){
+						menu = $("#menu");
+						menu.addClass("visible");
+					}, 500);
+				}, 1500);
+				//header.addClass("visible_swipe_up");
 			});
 		</script>
 	</body>
