--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<h1 id="header" class="hidden_swipe_up">I'm Shubhang</h1>
 		</center>
 		<div id="menu" align="center" class="hidden"><br>
-			<li style="margin-right: 10%; font-size: 50px;" class="random_motion"><i class="fa fa-user" aria-hidden="true"></i></li>
+			<li style="margin-right: 10%; font-size: 50px;" class="random_motion"><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
 			<li style="font-size: 50px;" class="random_motion"><a href="http://bashhungasit.wordpress.com">_<i class="fa fa-pencil" aria-hidden="true"></i></a></li>
 			<li style="font-size: 50px; margin-left: 10%;" class="random_motion"><i class="fa fa-address-book" aria-hidden="true"></i></li><br>
 		</div>
