--- a/index.html
+++ b/index.html
@@ -16,14 +16,40 @@
 			<center>
 				<h1 id="beforeheader" class="hidden hidden_swipe_up" style="margin-bottom: 0px !important;">Hi</h1>
 				<h1 id="header" class="hidden_swipe_up" style="margin-bottom: 0px !important">I'm Shubhang</h1>
-				<span id="aprog" class="hidden_swipe_up hidden" style="font-family: 'Swanky and Moo Moo', cursive; color: #4AB19A; font-size:200%">A programmer</span><br>
+				<span id="aprog" class="hidden_swipe_up hidden" style="font-family: 'Swanky and Moo Moo', cursive; color: #4AB19A; font-size:200%">A programmer <span class="fa fa-code"></span></span><br>
 			</center>
 			<br><br>
 			<div id="menu" align="center" class="hidden"><br>
-				<li style="margin-right: 10%; font-size: 50px;" class="tooltip"><a href="#"><span class="tooltiptext" style="font-size: 20px;">About</span><i class="fa fa-user" aria-hidden="true"></i></a></li>
+				<li style="margin-right: 10%; font-size: 50px;" class="tooltip" id="about"><a href="#"><span class="tooltiptext" style="font-size: 20px;">About</span><i class="fa fa-user" aria-hidden="true"></i></a></li>
 				<li style="font-size: 50px;" class="tooltip"><span class="tooltiptext" style="font-size: 20px;">Blog</span><a href="http://bashhungasit.wordpress.com">_<i class="fa fa-pencil" aria-hidden="true"></i></a></li>
-				<li style="font-size: 50px; margin-left: 10%;" class="tooltip"><span class="tooltiptext" style="font-size: 20px;">Contact</span><a href="#"><i class="fa fa-address-book" aria-hidden="true"></i></a></li><br><br><br><br>
+				<li style="font-size: 50px; margin-left: 10%;" class="tooltip" id="contact"><span class="tooltiptext" style="font-size: 20px;">Contact</span><a href="#"><i class="fa fa-address-book" aria-hidden="true"></i></a></li>
+				<li style="font-size: 50px; margin-left: 10%;" class="tooltip" id="code"><span class="tooltiptext" style="font-size: 20px;">Code</span><a href="#"><i class="fa fa-code" aria-hidden="true"></i></a></li><br><br><br><br>
 			</div>
+			<div id="content" align="center">
+				
+			</div>
+			<!--<div align="center">
+				<a href="http://facebook.com/shubhang.ss"><span class="fa fa-facebook tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;">
+					<span class="tooltiptext" style="font-size: 20px;">facebook.com/shubhang.ss</span>
+				</span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="http://github.com/shubhangsati"><span class="fa fa-github tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;">
+					<span class="tooltiptext" style="font-size: 20px;">github.com/shubhangsati</span>
+				</span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="mailto:shubhang16198@iiitd.ac.in"><span class="fa fa-envelope tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;">
+					<span class="tooltiptext" style="font-size: 20px;">shubhang16198@iiitd.ac.in</span>
+				</span></a>
+			</div>-->
+			<!--
+			<div align="center">
+				I’m Shubhang Sati, an engineering student at <a href="http://lifeatiiitdblog.wordpress.com" title="Life here">Indraprastha Institute of Information Tecnology, Delhi (IIITD)</a>. I’m a computer enthusiast and also very much into music. I like playing guitar for leisure. 
+			</div>			
+			
+			
+			<div align="center">
+				<a style="padding:5px; background-color:white; font-family:'Strait', sans-serif; font-size: 20px; border-radius: 10px;" href="http://www.codechef.com/users/shubhangsati">Codechef</a>
+				<a style="padding:5px; background-color:white; font-family:'Strait', sans-serif; font-size: 20px; border-radius: 10px;" href="http://www.codeforces.com/profile/Shubhang.Sati">Codeforces</a>
+			</div>-->
+			
 		</div>
 		<script type="text/javascript">
 			$(document).ready(function(){
@@ -55,6 +81,33 @@
 				}, 1000);
 				//header.addClass("visible_swipe_up");
 			});
+			$("#about").click(function(){
+				$("#content").removeClass("visible");
+				$("#content").addClass("hidden");
+				setTimeout(function(){
+					$("#content").removeClass("hidden");
+					$("#content").html("<div align='center' style='max-width:400px; font-family:\"Indie Family\", cursive;'>I’m Shubhang Sati, an engineering student at <a href='http://lifeatiiitdblog.wordpress.com' title='Life here'>Indraprastha Institute of Information Tecnology, Delhi (IIITD)</a>. I’m a computer enthusiast and also very much into music. I like playing guitar for leisure. </div>");
+					$("#content").addClass("visible");					
+				}, 1000);
+			});
+			$("#contact").click(function(){
+				$("#content").removeClass("visible");
+				$("#content").addClass("hidden");
+				$("#content").html('<div align="center"><a href="http://facebook.com/shubhang.ss"><span class="fa fa-facebook tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;"><span class="tooltiptext" style="font-size: 20px;">facebook.com/shubhang.ss</span></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://github.com/shubhangsati"><span class="fa fa-github tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;"><span class="tooltiptext" style="font-size: 20px;">github.com/shubhangsati</span></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:shubhang16198@iiitd.ac.in"><span class="fa fa-envelope tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;"><span class="tooltiptext" style="font-size: 20px;">shubhang16198@iiitd.ac.in</span></span></a></div>');
+				setTimeout(function(){
+					$("#content").removeClass("hidden");
+					$("#content").addClass("visible");
+				}, 1000);
+			});
+			$("#code").click(function(){
+				$("#content").removeClass("visible");
+				$("#content").addClass("hidden");
+				$("#content").html('<div align="center"><a style="padding:5px; background-color:white; font-family:Strait, sans-serif; font-size: 20px; border-radius: 10px;" href="http://www.codechef.com/users/shubhangsati">Codechef</a><a style="padding:5px; background-color:white; font-family:Strait, sans-serif; font-size: 20px; border-radius: 10px;" href="http://www.codeforces.com/profile/Shubhang.Sati">Codeforces</a></div>');
+				setTimeout(function(){
+					$("#content").removeClass("hidden");
+					$("#content").addClass("visible");
+				}, 1000);
+			})
 		</script>
 	</body>
 </html>
