--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 			</center>
 			<br><br>
 			<div id="menu" align="center" class="hidden"><br>
-				<li style="margin-right: 10%; font-size: 50px;" class="tooltip" id="about"><a href="#"><span class="tooltiptext" style="font-size: 20px;">About</span><i class="fa fa-user" aria-hidden="true"></i></a></li>
+				<li style="margin-right: 10%; font-size: 50px;" class="tooltip" id="about"><span class="tooltiptext" style="font-size: 20px;">About</span><i class="fa fa-user" aria-hidden="true"></i></li>
 				<li style="font-size: 50px;" class="tooltip"><span class="tooltiptext" style="font-size: 20px;">Blog</span><a href="http://bashhungasit.wordpress.com">_<i class="fa fa-pencil" aria-hidden="true"></i></a></li>
-				<li style="font-size: 50px; margin-left: 10%;" class="tooltip" id="contact"><span class="tooltiptext" style="font-size: 20px;">Contact</span><a href="#"><i class="fa fa-address-book" aria-hidden="true"></i></a></li>
-				<li style="font-size: 50px; margin-left: 10%;" class="tooltip" id="code"><span class="tooltiptext" style="font-size: 20px;">Code</span><a href="#"><i class="fa fa-code" aria-hidden="true"></i></a></li><br><br><br><br>
+				<li style="font-size: 50px; margin-left: 10%;" class="tooltip" id="contact"><span class="tooltiptext" style="font-size: 20px;">Contact</span><i class="fa fa-address-book" aria-hidden="true"></i></li>
+				<li style="font-size: 50px; margin-left: 10%;" class="tooltip" id="code"><span class="tooltiptext" style="font-size: 20px;">Code</span><i class="fa fa-code" aria-hidden="true"></i></li><br><br><br><br>
 			</div>
 			<div id="content" align="center">
 				
 			</div>
+			<br><br>
 			<!--<div align="center">
 				<a href="http://facebook.com/shubhang.ss"><span class="fa fa-facebook tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;">
 					<span class="tooltiptext" style="font-size: 20px;">facebook.com/shubhang.ss</span>
@@ -86,7 +87,7 @@
 				$("#content").addClass("hidden");
 				setTimeout(function(){
 					$("#content").removeClass("hidden");
-					$("#content").html("<div align='center' style='max-width:400px; font-family:\"Indie Flower\", cursive;'>I’m Shubhang Sati, an engineering student at <a href='http://lifeatiiitdblog.wordpress.com' title='Life here'>Indraprastha Institute of Information Tecnology, Delhi (IIITD)</a>. I’m a computer enthusiast and also very much into music. I like playing guitar for leisure. </div>");
+					$("#content").html("<div align='center' style='max-width:400px; font-family:\"Indie Flower\", cursive;'>I’m Shubhang Sati, an engineering student at <a href='http://lifeatiiitdblog.wordpress.com' title='Life here'>Indraprastha Institute of Information Tecnology, Delhi (IIITD)</a>. I’m a computer enthusiast and also very much into music. I like playing guitar for leisure. <br>Find my CV <a href='img/CV.pdf' style='color:maroon;'>here</a><br></div>");
 					$("#content").addClass("visible");					
 				}, 1000);
 			});
@@ -96,7 +97,7 @@
 				setTimeout(function(){
 
 					$("#content").removeClass("hidden");
-					$("#content").html('<div align="center"><a href="http://facebook.com/shubhang.ss"><span class="fa fa-facebook tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;"><span class="tooltiptext" style="font-size: 20px;">facebook.com/shubhang.ss</span></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://github.com/shubhangsati"><span class="fa fa-github tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;"><span class="tooltiptext" style="font-size: 20px;">github.com/shubhangsati</span></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:shubhang16198@iiitd.ac.in"><span class="fa fa-envelope tooltip2" style="font-size: 100px; -webkit-transition:all 0.5s ease;"><span class="tooltiptext" style="font-size: 20px;">shubhang16198@iiitd.ac.in</span></span></a></div>');
+					$("#content").html('<div align="center"><a href="http://facebook.com/shubhang.ss"><span class="fa fa-facebook tooltip2" style="font-size: 40px; -webkit-transition:all 0.5s ease;"><span class="tooltiptext" style="font-size: 10px;">facebook.com/shubhang.ss</span></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://github.com/shubhangsati"><span class="fa fa-github tooltip2" style="font-size: 40px; -webkit-transition:all 0.5s ease;"><span class="tooltiptext" style="font-size: 10px;">github.com/shubhangsati</span></span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:shubhang16198@iiitd.ac.in"><span class="fa fa-envelope tooltip2" style="font-size: 40px; -webkit-transition:all 0.5s ease;"><span class="tooltiptext" style="font-size: 10px;">shubhang16198@iiitd.ac.in</span></span></a></div>');
 					$("#content").addClass("visible");
 				}, 1000);
 			});
