--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		 <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta content="Hi! I am Shubhang Sati. Visit this website to know more about me" name="description">
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
 		<link rel="stylesheet" type="text/css" href="fa/css/font-awesome.min.css">
