added menu animations

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<br><br>
 			<div id="menu" align="center" class="hidden"><br>
 				<li style="margin-right: 10%; font-size: 50px;" class="tooltip" id="about"><span class="tooltiptext" style="font-size: 20px;">About</span><i class="fa fa-user" aria-hidden="true"></i></li>
-				<li style="font-size: 50px;" class="tooltip"><span class="tooltiptext" style="font-size: 20px;">Blog</span><a href="http://bashhungasit.wordpress.com">_<i class="fa fa-pencil" aria-hidden="true"></i></a></li>
+				<li style="font-size: 50px;" class="tooltip"><span class="tooltiptext" style="font-size: 20px;">Blog</span><a href="http://bashhungasit.wordpress.com"><i>_</i><i class="fa fa-pencil" aria-hidden="true"></i></a></li>
 				<li style="font-size: 50px; margin-left: 10%;" class="tooltip" id="contact"><span class="tooltiptext" style="font-size: 20px;">Contact</span><i class="fa fa-address-book" aria-hidden="true"></i></li>
 				<li style="font-size: 50px; margin-left: 10%;" class="tooltip" id="code"><span class="tooltiptext" style="font-size: 20px;">Code</span><i class="fa fa-code" aria-hidden="true"></i></li><br><br><br><br>
 			</div>
