--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			</div>-->
 			<!--
 			<div align="center">
-				I’m Shubhang Sati, an engineering student at <a href="http://lifeatiiitdblog.wordpress.com" title="Life here">Indraprastha Institute of Information Tecnology, Delhi (IIITD)</a>. I’m a computer enthusiast and also very much into music. I like playing guitar for leisure. 
+				I’m Shubhang Sati, an engineering student at <a href="http://lifeatiiitdblog.wordpress.com" title="Life here">Indraprastha Institute of Information Technology, Delhi (IIITD)</a>. I’m a computer enthusiast and also very much into music. I like playing the guitar for leisure. 
 			</div>			
 			
 			
