--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				$("#content").addClass("hidden");
 				setTimeout(function(){
 					$("#content").removeClass("hidden");
-					$("#content").html("<div align='center' style='max-width:400px; font-family:\"Indie Flower\", cursive;'>I’m Shubhang Sati, an engineering student at <a href='http://lifeatiiitdblog.wordpress.com' title='Life here'>Indraprastha Institute of Information Tecnology, Delhi (IIITD)</a>. I’m a computer enthusiast and also very much into music. I like playing guitar for leisure. <br>Find my CV <a href='img/CV.pdf' style='color:maroon;'>here</a><br></div>");
+					$("#content").html("<div align='center' style='max-width:400px; font-family:\"Indie Flower\", cursive;'>I’m Shubhang Sati, an engineering student at <a href='http://lifeatiiitdblog.wordpress.com' title='Life here'>Indraprastha Institute of Information Tecnology, Delhi (IIITD)</a>. I’m a computer enthusiast and also very much into music. I like playing guitar for leisure. <br>Find my CV <a href='img/resume.pdf' style='color:maroon;'>here</a><br></div>");
 					$("#content").addClass("visible");					
 				}, 1000);
 			});
